; ModuleID = '/home/carl/AnghaBench/php-src/Zend/extr_zend_exceptions.c_i_get_exception_base.c'
source_filename = "/home/carl/AnghaBench/php-src/Zend/extr_zend_exceptions.c_i_get_exception_base.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@zend_ce_exception = common dso_local global i32* null, align 8
@zend_ce_error = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*)* @i_get_exception_base to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @i_get_exception_base(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = call i32 @Z_OBJCE_P(i32* %3)
  %5 = load i32*, i32** @zend_ce_exception, align 8
  %6 = call i64 @instanceof_function(i32 %4, i32* %5)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %10

8:                                                ; preds = %1
  %9 = load i32*, i32** @zend_ce_exception, align 8
  br label %12

10:                                               ; preds = %1
  %11 = load i32*, i32** @zend_ce_error, align 8
  br label %12

12:                                               ; preds = %10, %8
  %13 = phi i32* [ %9, %8 ], [ %11, %10 ]
  ret i32* %13
}

declare dso_local i64 @instanceof_function(i32, i32*) #1

declare dso_local i32 @Z_OBJCE_P(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
